# mango_fzco_test

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  prefill_test_data.py  pyproject.toml  ws_client.html
.deploy/docker/: Dockerfile
scripts/: launch.sh
src/: main.py
src/application/dtos/: __init__.py  message_dto.py
src/application/services/: __init__.py  auth_service.py  ws_manager.py
src/application/usecases/: __init__.py  create_chat_usecase.py  create_group_usecase.py  create_user_usecase.py  get_chat_hist_usecase.py  get_user_usecase.py  send_message_usecase.py  sendmessage_usecase.py
src/config/: __init__.py  logging.py  settings.py
src/di/: __init__.py  container.py
src/domain/entities/: __init__.py  chat.py  groups.py  message.py  user.py
src/domain/exceptions/: __init__.py  exceptions.py
src/domain/repositories/: __init__.py  chat_repo.py  group_repo.py  message_repo.py  user_repo.py
src/domain/services/: __init__.py  jwt_service.py
src/infrastructure/database/: chat_model.py  group_model.py  message_model.py  user_model.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/models/: __init__.py  base.py  chat_model.py  group_model.py  m2m_tables.py  message_model.py  user_model.py
src/infrastructure/security/: __init__.py  jwt.py
src/presentation/api/: __init__.py  auth_router.py  entities_cruds.py  history_api_router.py
src/presentation/schemas/: auth_requests.py  requests.py
src/presentation/websockets/: __init__.py  ws_chats_router.py
(+5 files in other folders)
